force-app/main/default/objects/Lien__c/Lien__c.object-meta.xml
<CustomObject>
    <description>Record of liens created in reference to a judgment</description>
    <label>Lien</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Lien ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>