force-app/main/default/objects/Lien__c/fields/Date_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Filed__c</fullName>
    <inlineHelpText>The date stamped by the recording agency on the conformed copy of the lien. This is the date the lien becomes perfected against third parties through its official recording</inlineHelpText>
    <label>Date Filed</label>
    <type>Date</type>
</CustomField>