force-app/main/default/objects/Lien__c/fields/Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued__c</fullName>
    <inlineHelpText>Date DLSE staff signed the lien document</inlineHelpText>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>