force-app/main/default/objects/Lien__c/fields/Lien_Type__c.field-meta.xml
<CustomField>
    <fullName>Lien_Type__c</fullName>
    <label>Lien Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abstract of Judgment (Real Property Lien)</fullName>
            </value>
            <value>
                <fullName>Certificate of Lien (90.8)</fullName>
            </value>
            <value>
                <fullName>Certificate of Lien (98.2g)</fullName>
                <label>Certificate of Lien (98.2(g))</label>
            </value>
            <value>
                <fullName>Certificate of Penalty Lien (Workers Comp)</fullName>
                <label>Certificate of Penalty Lien (Worker's Comp)</label>
            </value>
            <value>
                <fullName>Deed of Trust</fullName>
            </value>
            <value>
                <fullName>Labor Code 238.2 Lien</fullName>
            </value>
            <value>
                <fullName>Labor Code 238.3 Lien</fullName>
            </value>
            <value>
                <fullName>Lien in Pending Action</fullName>
            </value>
            <value>
                <fullName>Mechanics Lien</fullName>
            </value>
            <value>
                <fullName>Personal Property Judgment Lien (JL-1)</fullName>
            </value>
            <value>
                <fullName>UCC Financing Statement (UCC-1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>