force-app/main/default/objects/Lien__c/fields/Number_of_Escrow_Pay_Off_Demand__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Escrow_Pay_Off_Demand__c</fullName>
    <description>Counts the number Escrow/Pay Off Demand for Release of Lien Record Types</description>
    <label>Number of Escrow / Pay-Off Demand</label>
    <summaryFilterItems>
        <field>Escrow_Pay_Off_Demand__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Release of Lien</value>
    </summaryFilterItems>
    <summaryForeignKey>Escrow_Pay_Off_Demand__c.Lien__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>