force-app/main/default/objects/Lien__c/fields/Recording_Agency__c.field-meta.xml
<CustomField>
    <fullName>Recording_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Governmental body tasked with maintaining a record of a lien</inlineHelpText>
    <label>Recording Agency</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Lien Recording Agency</relationshipLabel>
    <relationshipName>Recording_Agency_Liens</relationshipName>
    <type>Lookup</type>
</CustomField>